# ETCS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.gradle  etcs.desktop  privacy-policy.md  wasi-sdk.cmake
DMI/: .gitignore  Android.mk  CMakeLists.txt  CMakeLists_sr.txt  CMakeLists_wasm.txt  Makefile  init.cpp  messages.h  monitor.cpp  monitor.h  region.h  resource.rc  settings.ini  stm_alstom.json  stm_ansaldo.json  stm_bombardier.json  stm_hitachi.json  stm_siemens.json  stm_siemensDE.json  stm_windows.json  time.cpp  time.h  time_etcs.h
DMI/Config/: config.cpp  config.h
DMI/STM/: stm_objects.cpp  stm_objects.h
DMI/Settings/: settings.cpp  settings.h
DMI/control/: control.cpp  control.h
DMI/distance/: distance.cpp  distance.h
DMI/graphics/: MainMenu.cpp  MainMenu.h  PASP.cpp  PASP.h  button.cpp  button.h  buttonM.cpp  buttonM.h  circle.h  color.h  component.cpp  component.h  data_entry.cpp  data_entry.h  display.cpp  display.h  drawing.cpp  drawing.h  driver_id.cpp  driver_id.h  flash.cpp  flash.h  graphic.h  icon_button.cpp  icon_button.h  image_graphic.h  input_window.cpp  input_window.h  layout.cpp  layout.h  level_window.cpp  level_window.h  line.h  menu.cpp  menu.h  menu_main.cpp  menu_main.h  menu_override.cpp  menu_override.h  menu_settings.cpp  (+19 more)
DMI/graphics/sdl/: component.cpp  drawing.cpp  gfx_primitives.cpp  gfx_primitives.h
DMI/language/: language.cpp  language.h  moFileConfig.h  moFileReader.cpp
DMI/messages/: messages.cpp  messages.h  text_strings.h
DMI/planning/: planning.cpp  planning.h
DMI/platform/: null_platform.h  platform.cpp  platform.h  platform_util.h  sdl_platform.cpp  sdl_platform.h  simrail_platform.cpp
DMI/renderer/: null_renderer.h  renderer.h  sdl_renderer.cpp  sdl_renderer.h
DMI/softkeys/: softkey.cpp  softkey.h
DMI/sound/: sound.cpp  sound.h
DMI/speed/: gauge.cpp  gauge.h
DMI/state/: acks.cpp  acks.h  brake.cpp  conditions.cpp  gps_pos.cpp  gps_pos.h  level.cpp  level.h  mode.cpp  mode.h  override.cpp  override.h  radio.cpp  time_hour.cpp  time_hour.h
DMI/tcp/: server.cpp  server.h
DMI/window/: brightness.cpp  brightness.h  data_entry.cpp  data_entry.h  data_validation.cpp  data_validation.h  data_view.h  driver_id.cpp  driver_id.h  fixed_train_data.cpp  fixed_train_data.h  input_data.cpp  input_data.h  keyboard.cpp  keyboard.h  keyboards.h  language_window.cpp  language_window.h  level_window.cpp  level_window.h  menu.cpp  menu.h  menu_main.cpp  menu_main.h  menu_ntc.cpp  menu_ntc.h  menu_override.cpp  menu_override.h  menu_radio.cpp  menu_radio.h  menu_settings.cpp  menu_settings.h  menu_spec.cpp  menu_spec.h  nav_buttons.cpp  nav_buttons.h  rbc_data.cpp  rbc_data.h  running_number.cpp  running_number.h  (+15 more)
EVC/: .gitignore  Android.mk  CMakeLists.txt  Makefile  Packets.h  antenna.cpp  antenna.h  bitreader.h  config.json  evc.cpp  evc.h  optional.h  packet.h  packet_reader.h  parsed_packet.h  resource.rc  stm_bombardier.json  traindata.txt  variable.cpp  variable.h
EVC/Config/: config.cpp  config.h
EVC/DMI/: acks.cpp  acks.h  dmi.cpp  dmi.h  text_message.h  text_messages.cpp  track_ahead_free.cpp  track_ahead_free.h  windows.cpp  windows.h
EVC/Euroradio/: cfm.cpp  cfm.h  platform_terminals.h  radio_connection.cpp  radio_connection.h  safe_radio.h  safe_radio_connection.cpp  session.cpp  session.h  tcp_cfm.cpp  tcp_cfm.h  tcp_safe_connection.cpp  tcp_safe_connection.h  terminal.cpp  terminal.h
EVC/LX/: level_crossing.cpp  level_crossing.h
EVC/MA/: mode_profile.cpp  mode_profile.h  movement_authority.cpp  movement_authority.h
EVC/NationalFN/: asfa.cpp  asfa.h  nationalfn.cpp  nationalfn.h
EVC/OR_interface/: interface.cpp  interface.h  orts_server.cpp  orts_wrapper.h
EVC/Packets/: 0.h  11.txt  12.h  131.h  132.h  133.h  136.h  137.h  138.h  139.h  140.h  141.h  143.h  15.h  16.h  180.h  181.h  2.h  21.h  254.h  27.h  3.h  39.h  40.h  41.h  42.h  44.h  45.h  46.h  47.h  49.h  5.h  51.h  52.h  57.h  58.h  6.h  63.h  64.h  65.h  (+29 more)
EVC/Packets/STM/: 1.h  128.h  129.h  13.h  130.h  4.h  (+26 more)
EVC/Position/: distance.cpp  distance.h  geographical.cpp  geographical.h  linking.cpp  linking.h
EVC/Procedures/: level_transition.cpp  level_transition.h  mode_transition.cpp  mode_transition.h  override.cpp  override.h  procedures.h  reversing.cpp  reversing.h  start.cpp  start.h  stored_information.cpp  stored_information.h  train_trip.cpp  train_trip.h
EVC/SSP/: ssp.cpp  ssp.h
EVC/STM/: stm.cpp  stm.h  stm_state.h
EVC/Supervision/: acceleration.cpp  acceleration.h  common.h  conversion_model.cpp  conversion_model.h  curve_calc.cpp  curve_calc.h  distance.cpp  distance.h  emergency_stop.cpp  emergency_stop.h  fixed_values.cpp  fixed_values.h  locomotive_data.cpp  locomotive_data.h  national_values.cpp  national_values.h  sb_feedback.cpp  sb_feedback.h  speed_profile.cpp  speed_profile.h  supervision.cpp  supervision.h  supervision_targets.h  targets.cpp  targets.h  track_pbd.h  train_data.cpp  train_data.h
EVC/Time/: clock.cpp  clock.h
EVC/TrackConditions/: route_suitability.cpp  route_suitability.h  track_condition.h  track_conditions.cpp
EVC/TrainData/: traindata_100.json  traindata_102.json  traindata_102adif.json  traindata_103.json  traindata_104.json  traindata_105.json  traindata_106.json  traindata_107.json  traindata_108.json  traindata_109.json  traindata_112.json  traindata_1126.json  traindata_1127.json  traindata_114.json  traindata_120.json  traindata_121.json  traindata_130.json  traindata_1302.json  traindata_1305.json  traindata_162.json  traindata_355.json  traindata_355c.json  traindata_36WED.json  traindata_446.json  traindata_447.json  traindata_449.json  traindata_450.json  traindata_454.json  traindata_465.json  traindata_490.json  traindata_TraxxDC3.json  traindata_kiss.json
EVC/TrainSubsystems/: asc.cpp  asc.h  brake.cpp  brake.h  cold_movement.cpp  cold_movement.h  power.cpp  power.h  subsystems.h  train_interface.cpp  train_interface.h
EVC/Version/: translate.cpp  translate.h  version.cpp  version.h
EVC/language/: language.cpp  language.h  moFileReader.h
(+202 files in other folders)
